# libbinio

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  ChangeLog  INSTALL  Makefile.am  Makefile.bt  NEWS  README  TODO  appveyor.yml  binio.spec  binio_mdk.spec  configure.ac  configure.in  index.html  index.shtml  libbinio.qpg
.github/workflows/: build.yml  cmake-build.yml  codeql.yml
contrib/vs2015/: libbinio.autopkg.template
contrib/vs2015/libbinio/: libbinio.vcxproj
doc/: .cvsignore  CMakeLists.txt  Makefile.am  libbinio.texi  update-docs.sh
doc/libbinio/1.0/: Alien-architectures.html  Base-classes.html  Basics.html  Binary-stream-I-O.html  Class-Index.html  Concept-Index.html  Concepts.html  Configuration.html  Copying-This-Manual.html  Errors.html  Examples.html  FAQ.html  Features.html  File-stream-classes.html  File-streams.html  Files.html  GNU-Free-Documentation-License.html  Introduction.html  Method-Index.html  Reference.html  String-streams.html  Type-Variable-and-Macro-Index.html  Usage.html  Wrapping-around-iostream.html  binfbase.html  binio.html  binistream.html  binostream.html  binstream.html  index.html  iostream-wrappers.html
doc/libbinio/1.1/: Alien-architectures.html  Base-classes.html  Basics.html  Class-Index.html  Concept-Index.html  Concepts.html  Configuration.html  Copying-This-Manual.html  Errors.html  Examples.html  FAQ.html  Features.html  File-stream-classes.html  File-streams.html  Files.html  GNU-Free-Documentation-License.html  Introduction.html  Method-Index.html  Peeking.html  Reading-and-Writing.html  Reference.html  Seeking.html  String-streams.html  Type-Variable-and-Macro-Index.html  Usage.html  Wrapping-around-iostream.html  binfbase.html  binio.html  binistream.html  binostream.html  binstream.html  index.html  iostream-wrappers.html
doc/libbinio/1.2/: Alien-architectures.html  Base-classes.html  Basics.html  Class-Index.html  Concept-Index.html  Concepts.html  Configuration.html  Copying-This-Manual.html  Errors.html  Examples.html  FAQ.html  Features.html  File-stream-classes.html  File-streams.html  Files.html  GNU-Free-Documentation-License.html  Introduction.html  Method-Index.html  Peeking.html  Reading-and-Writing.html  Reference.html  Seeking.html  String-streams.html  Type-Variable-and-Macro-Index.html  Usage.html  Wrapping-around-iostream.html  binfbase.html  binio.html  binistream.html  binostream.html  binstream.html  index.html  iostream-wrappers.html
doc/libbinio/1.3/: Alien-architectures.html  Base-classes.html  Basics.html  Class-Index.html  Concept-Index.html  Concepts.html  Configuration.html  Copying-This-Manual.html  Errors.html  Examples.html  FAQ.html  Features.html  File-stream-classes.html  File-streams.html  Files.html  GNU-Free-Documentation-License.html  Introduction.html  Method-Index.html  Peeking.html  Reading-and-Writing.html  Reference.html  Seeking.html  String-streams.html  Type-Variable-and-Macro-Index.html  Usage.html  Wrapping-around-iostream.html  binfbase.html  binio.html  binistream.html  binostream.html  binstream.html  index.html  iostream-wrappers.html
doc/libbinio/1.4/: Alien-architectures.html  Base-classes.html  Basics.html  Class-Index.html  Concept-Index.html  Concepts.html  Configuration.html  Copying-This-Manual.html  Errors.html  Examples.html  FAQ.html  Features.html  File-stream-classes.html  File-streams.html  Files.html  GNU-Free-Documentation-License.html  Introduction.html  Method-Index.html  Peeking.html  Reading-and-Writing.html  Reference.html  Seeking.html  String-streams.html  Type-Variable-and-Macro-Index.html  Usage.html  Wrapping-around-iostream.html  binfbase.html  binio.html  binistream.html  binostream.html  binstream.html  index.html  iostream-wrappers.html
doc/libbinio/1.5/: Alien-architectures.html  Base-classes.html  Basics.html  Class-Index.html  Concept-Index.html  Concepts.html  Configuration.html  Copying-This-Manual.html  Creating-architecture_002dindependent-file-formats.html  Errors.html  Examples.html  FAQ.html  Features.html  File-stream-classes.html  File-streams.html  Files.html  GNU-Free-Documentation-License.html  Introduction.html  Method-Index.html  Peeking.html  Reading-and-Writing.html  Reference.html  Seeking.html  String-streams.html  Type-Variable-and-Macro-Index.html  Usage.html  Wrapping-around-iostream.html  binfbase.html  binio.html  binistream.html  binostream.html  binstream.html  index.html  iostream-wrappers.html
packaging/: CMakeLists.txt
src/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.bt  binfile.cpp  binfile.h  binio.cpp  binio.h.in  binstr.cpp  binwrap.cpp  binwrap.h  config.bat  libbinio.dsp
